# bmstu-oop

./: README.md
lab-01/: CMakeLists.txt
lab-01/example/: tetrahedron
lab-01/include/: binio.hpp  edges.hpp  error.hpp  event.hpp  fiber.hpp  graph.hpp  model.hpp  point.hpp  react.hpp  trans.hpp  verts.hpp
lab-01/src/: edges.cpp  error.cpp  event.cpp  fiber.cpp  graph.cpp  model.cpp  point.cpp  react.cpp  verts.cpp
lab-02/: CMakeLists.txt
lab-02/include/: except.hpp  matrix.hpp  scales.hpp  vector.hpp
lab-02/include/implementation/: matrix.hpp  vector.hpp
lab-02/src/: except.cpp
lab-02/test/: matrix.cpp  runner.cpp  vector.cpp
lab-04/: CMakeLists.txt
lab-04/doc/: entities.drawio  std.drawio
lab-04/inc/: brain.hpp  cabin.hpp  doors.hpp  floor.hpp  press.hpp  timed.hpp
lab-04/src/: brain.cpp  cabin.cpp  doors.cpp  floor.cpp  press.cpp  start.cpp  timed.cpp
